--- a/GabDemoApp/GabDemoApp/GabDemoApp.csproj
+++ b/GabDemoApp/GabDemoApp/GabDemoApp.csproj
@@ -207,7 +207,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Repository\DocumentDbRepository.cs" />
+    <Compile Include="Service\DocumentService.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
