Added app setting keys for requied fields.

--- a/GabDemoApp/GabDemoApp/Web.config
+++ b/GabDemoApp/GabDemoApp/Web.config
@@ -16,6 +16,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+   <!-- Azure related settings-->
+    <add key="endpoint" value="Your endpoint here" />
+    <add key="authKey" value="Your authentication key here" />
+    <add key="database" value="EmployeeDb" />
+    <add key="collection" value="EmployeesCollectionsDb" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
