Corrected few issues related to code and make all the things working.

--- a/GabDemoApp/GabDemoApp/Web.config
+++ b/GabDemoApp/GabDemoApp/Web.config
@@ -17,10 +17,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
    <!-- Azure related settings-->
-    <add key="endpoint" value="Your endpoint here" />
+    <add key="endpoint" value="Your end point here" />
     <add key="authKey" value="Your authentication key here" />
     <add key="database" value="EmployeeDb" />
-    <add key="collection" value="EmployeesCollectionsDb" />
+    <add key="collection" value="EmployeesCollection" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
